Simplify BreadCrumbs definition

--- a/auto.html
+++ b/auto.html
@@ -1,11 +1,14 @@
 ---
 title: ConEmu | automate installation
 
-bc1_url: TableOfContents.html#conemu
-bc1_title: ConEmu
-
-bc2_url: Installation.html
-bc2_title: Installation
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#conemu
+   title: ConEmu
+   next: d
+ - id: d
+   url: Installation.html
+   title: Installation
 ---
 
 
