--- a/donate.html
+++ b/donate.html
@@ -4,8 +4,10 @@ title: ConEmu | Support development by donation
 description: "You can show your appreciation and support further development and maintaining
    by contributing with bugreporting, funding, documentation, code or anything else."
 
-bc1_url: TableOfContents.html#conemu
-bc1_title: ConEmu
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#conemu
+   title: ConEmu
 ---
 
 
