--- a/en/ConEmuArgs.html
+++ b/en/ConEmuArgs.html
@@ -5,11 +5,14 @@ redirect_from: /ru/ConEmuArgs.html
 
 title: "ConEmu | ConEmu.exe Command Line Switches"
 
-bc1_url: TableOfContents.html#launch-apps
-bc1_title: Launch Apps
-
-bc2_url: CommandLine.html
-bc2_title: Switches
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#launch-apps
+   title: Launch Apps
+   next: d
+ - id: d
+   url: CommandLine.html
+   title: Switches
 ---
 
 <!-- Content starts -->
