--- a/en/ConEmuC.html
+++ b/en/ConEmuC.html
@@ -7,11 +7,14 @@ description: "ConEmuC implements full-featured console window.
    Also it can be used from command line to do many jobs like
    posting GuiMacro, downloading files, exporting environment and more."
 
-bc1_url: TableOfContents.html#launch-apps
-bc1_title: Launch Apps
-
-bc2_url: CommandLine.html
-bc2_title: Switches
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#launch-apps
+   title: Launch Apps
+   next: d
+ - id: d
+   url: CommandLine.html
+   title: Switches
 ---
 
 <!-- Content starts -->
