--- a/en/ConEmuEnvironment.html
+++ b/en/ConEmuEnvironment.html
@@ -6,8 +6,10 @@ description: "List of environment variables set by ConEmu.
    Cheating with system time and console code page.
    Usage examples."
 
-bc1_url: TableOfContents.html#features
-bc1_title: Features
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#features
+   title: Features
 ---
 
 <!-- Content starts -->
