--- a/en/ConEmuFAQ.html
+++ b/en/ConEmuFAQ.html
@@ -3,8 +3,10 @@ title: ConEmu | FAQ - Frequently Asked Questions
 
 description: Frequenly asked user questions about ConEmu usage
 
-bc1_url: TableOfContents.html#conemu
-bc1_title: ConEmu
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#conemu
+   title: ConEmu
 ---
 
 <!-- Content starts -->
