--- a/en/DefaultTerminal.html
+++ b/en/DefaultTerminal.html
@@ -7,8 +7,10 @@ title: "ConEmu | DefaultTerminal"
 
 description: "The only way to replace default Windows terminal"
 
-bc1_url: TableOfContents.html#launch-apps
-bc1_title: Launch Apps
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#launch-apps
+   title: Launch Apps
 ---
 
 <!-- Content starts -->
