--- a/en/RealConsole.html
+++ b/en/RealConsole.html
@@ -3,11 +3,14 @@ redirect_from: /ru/RealConsole.html
 
 title: "ConEmu | RealConsole"
 
-bc1_url: TableOfContents.html#terms
-bc1_title: ConEmu
-
-bc2_url: ConEmuTerms.html
-bc2_title: Terms
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#terms
+   title: ConEmu
+   next: d
+ - id: d
+   url: ConEmuTerms.html
+   title: Terms
 ---
 
 <!-- Content starts -->
