--- a/en/Whats_New_2.html
+++ b/en/Whats_New_2.html
@@ -3,11 +3,14 @@ redirect_from: /ru/Whats_New_2.html
 
 title: "ConEmu | Whats_New 120101..131225"
 
-bc1_url: TableOfContents.html#conemu
-bc1_title: ConEmu
-
-bc2_url: WhatsNew.html
-bc2_title: WhatsNew
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#conemu
+   title: ConEmu
+   next: d
+ - id: d
+   url: WhatsNew.html
+   title: WhatsNew
 ---
 
 <!-- Content starts -->
