--- a/en/CommandLine.html
+++ b/en/CommandLine.html
@@ -3,8 +3,10 @@ redirect_from: /ru/CommandLine.html
 
 title: "ConEmu | CommandLine - GUI, Console and Shells switches"
 
-bc1_url: TableOfContents.html#launch-apps
-bc1_title: Launch Apps
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#launch-apps
+   title: Launch Apps
 ---
 
 <!-- Content starts -->
