--- a/en/ConEmuFolders.html
+++ b/en/ConEmuFolders.html
@@ -3,11 +3,14 @@ redirect_from: /ru/ConEmuFolders.html
 
 title: "ConEmu | Installation Folders Structure"
 
-bc1_url: TableOfContents.html#conemu
-bc1_title: ConEmu
-
-bc2_url: Installation.html
-bc2_title: Installation
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#conemu
+   title: ConEmu
+   next: d
+ - id: d
+   url: Installation.html
+   title: Installation
 ---
 
 <!-- Content starts -->
