--- a/en/ConEmuHk.html
+++ b/en/ConEmuHk.html
@@ -3,11 +3,14 @@ redirect_from: /ru/ConEmuHk.html
 
 title: "ConEmu | ConEmuHk - Hooks and Injects"
 
-bc1_url: TableOfContents.html#terms
-bc1_title: ConEmu
-
-bc2_url: ConEmuTerms.html
-bc2_title: Terms
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#terms
+   title: ConEmu
+   next: d
+ - id: d
+   url: ConEmuTerms.html
+   title: Terms
 ---
 
 <!-- Content starts -->
