--- a/en/DosBox.html
+++ b/en/DosBox.html
@@ -3,8 +3,10 @@ redirect_from: /ru/DosBox.html
 
 title: "ConEmu | DosBox integration"
 
-bc1_url: TableOfContents.html#launch-apps
-bc1_title: Launch Apps
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#launch-apps
+   title: Launch Apps
 ---
 
 <!-- Content starts -->
