--- a/en/NewConsole.html
+++ b/en/NewConsole.html
@@ -3,8 +3,10 @@ redirect_from: /ru/NewConsole.html
 
 title: "ConEmu | ‘-new_console’ and ‘-cur_console’ switches"
 
-bc1_url: TableOfContents.html#launch-apps
-bc1_title: Launch Apps
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#launch-apps
+   title: Launch Apps
 ---
 
 <!-- Content starts -->
