--- a/en/StartupDir.html
+++ b/en/StartupDir.html
@@ -3,8 +3,10 @@ redirect_from: /ru/StartupDir.html
 
 title: "ConEmu | Startup Directory"
 
-bc1_url: TableOfContents.html#launch-apps
-bc1_title: Launch Apps
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#launch-apps
+   title: Launch Apps
 ---
 
 <!-- Content starts -->
