--- a/en/Tasks.html
+++ b/en/Tasks.html
@@ -3,8 +3,10 @@ redirect_from: /ru/Tasks.html
 
 title: "ConEmu | Tasks"
 
-bc1_url: TableOfContents.html#launch-apps
-bc1_title: Launch Apps
+breadcrumbs:
+ - id: c
+   url: TableOfContents.html#launch-apps
+   title: Launch Apps
 ---
 
 <!-- Content starts -->
