--- a/auto.html
+++ b/auto.html
@@ -3,14 +3,13 @@ title: ConEmu | automate installation
 
 breadcrumbs:
  - id: c
-   url: TableOfContents.html#conemu
+   url: en/TableOfContents.html#conemu
    title: ConEmu
    next: d
  - id: d
-   url: Installation.html
+   url: en/Installation.html
    title: Installation
 ---
-
 
 <!-- Content starts -->
 
