Optional 'canonical' for some pages

--- a/ru/index.html
+++ b/ru/index.html
@@ -1,5 +1,8 @@
 ---
+canonical: http://www.conemu.ru/
+
 redirect_from: /ru/ConEmu.html
+
 title: ConEmu - Удобный терминал для Windows
 
 description: "Простой ресайз окна консоли, максимизация и полноэкранный режим,
