Convert to auto.md

--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -72,7 +72,7 @@ or anything else, spreading the word for example.
 <li>Default StatusBar columns were changed. </li>
 <li>In some cases font size (StatusBar, TabBar) was smaller than expected in new configs. </li>
 <li>Allow to stop buzzing when started with '-basic' switch. </li>
-<li><a href="/auto.html#cinst">Сhocolatey packets</a> are released officially now. </li>
+<li><a href="auto.html#cinst">Сhocolatey packets</a> are released officially now. </li>
 </ul>
 
 
