--- a/donate.html
+++ b/donate.html
@@ -85,7 +85,7 @@ After you press ‘Contribute’ button you will be passed to https Yandex.Money
  <input type="hidden" name="need-email" value="false" >
  <input type="hidden" name="need-phone" value="false">
  <input type="hidden" name="need-address" value="false">
-<table border="0" width="100%">
+<table class="no-border">
 <tr><td class="text Yinfo">Amount (rub):</td>
 <td><input type="number" name="sum" value="" data-type="number" ></td></tr>
 <tr><td class="text Yinfo">Comment (optional):</td>
