--- a/en/Downloads.html
+++ b/en/Downloads.html
@@ -16,7 +16,7 @@ readalso:
 
 <!-- Content starts -->
 
-<table cellpadding="0" cellspacing="0" border="0" width="100%">
+<table class="no-border">
 <tr><td align="left" valign="top" colspan="3" width="550">
 
 <h1 id="h0"><a name="Which_version_to_choose"></a>Which version to choose<a href="#Which_version_to_choose" class="section_anchor"></a></h1>
