Use simple breadcrumbs definitions

--- a/donate.html
+++ b/donate.html
@@ -5,8 +5,7 @@ description: "You can show your appreciation and support further development and
    by contributing with bugreporting, funding, documentation, code or anything else."
 
 breadcrumbs:
- - id: c
-   url: en/TableOfContents.html#conemu
+ - url: TableOfContents.html#conemu
    title: ConEmu
 ---
 
