--- a/en/Certificate.html
+++ b/en/Certificate.html
@@ -4,8 +4,7 @@ redirect_from: /ru/Certificate.html
 title: "ConEmu | Certificate"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#conemu
+ - url: TableOfContents.html#conemu
    title: ConEmu
 ---
 
