--- a/en/CommandLine.html
+++ b/en/CommandLine.html
@@ -4,8 +4,7 @@ redirect_from: /ru/CommandLine.html
 title: "ConEmu | CommandLine - GUI, Console and Shells switches"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#launch-apps
+ - url: TableOfContents.html#launch-apps
    title: Launch Apps
 ---
 
