--- a/en/ConEmuArgs.html
+++ b/en/ConEmuArgs.html
@@ -6,12 +6,9 @@ redirect_from: /ru/ConEmuArgs.html
 title: "ConEmu | ConEmu.exe Command Line Switches"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#launch-apps
+ - url: TableOfContents.html#launch-apps
    title: Launch Apps
-   next: d
- - id: d
-   url: CommandLine.html
+ - url: CommandLine.html
    title: Switches
 ---
 
