--- a/en/ConEmuC.html
+++ b/en/ConEmuC.html
@@ -8,12 +8,9 @@ description: "ConEmuC implements full-featured console window.
    posting GuiMacro, downloading files, exporting environment and more."
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#launch-apps
+ - url: TableOfContents.html#launch-apps
    title: Launch Apps
-   next: d
- - id: d
-   url: CommandLine.html
+ - url: CommandLine.html
    title: Switches
 ---
 
