--- a/en/ConEmuFolders.html
+++ b/en/ConEmuFolders.html
@@ -4,12 +4,9 @@ redirect_from: /ru/ConEmuFolders.html
 title: "ConEmu | Installation Folders Structure"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#conemu
+ - url: TableOfContents.html#conemu
    title: ConEmu
-   next: d
- - id: d
-   url: Installation.html
+ - url: Installation.html
    title: Installation
 ---
 
