--- a/en/DefaultTerminal.html
+++ b/en/DefaultTerminal.html
@@ -8,8 +8,7 @@ title: "ConEmu | DefaultTerminal"
 description: "The only way to replace default Windows terminal"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#launch-apps
+ - url: TableOfContents.html#launch-apps
    title: Launch Apps
 ---
 
