--- a/en/LaunchNewTab.html
+++ b/en/LaunchNewTab.html
@@ -4,8 +4,7 @@ redirect_from: /ru/LaunchNewTab.html
 title: "ConEmu | Launch New Tab"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#launch-apps
+ - url: TableOfContents.html#launch-apps
    title: Launch Apps
 ---
 
