--- a/en/NewConsole.html
+++ b/en/NewConsole.html
@@ -4,8 +4,7 @@ redirect_from: /ru/NewConsole.html
 title: "ConEmu | ‘-new_console’ and ‘-cur_console’ switches"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#launch-apps
+ - url: TableOfContents.html#launch-apps
    title: Launch Apps
 ---
 
