--- a/en/RestartTab.html
+++ b/en/RestartTab.html
@@ -4,8 +4,7 @@ redirect_from: /ru/RestartTab.html
 title: "ConEmu | RestartTab"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#launch-apps
+ - url: TableOfContents.html#launch-apps
    title: Launch Apps
 ---
 
