--- a/en/Screenshots.html
+++ b/en/Screenshots.html
@@ -4,8 +4,7 @@ redirect_from: /ru/Screenshots.html
 title: "ConEmu | Screenshots"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#conemu
+ - url: TableOfContents.html#conemu
    title: ConEmu
 ---
 
