--- a/en/StartupDir.html
+++ b/en/StartupDir.html
@@ -4,8 +4,7 @@ redirect_from: /ru/StartupDir.html
 title: "ConEmu | Startup Directory"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#launch-apps
+ - url: TableOfContents.html#launch-apps
    title: Launch Apps
 ---
 
