--- a/en/Tasks.html
+++ b/en/Tasks.html
@@ -4,8 +4,7 @@ redirect_from: /ru/Tasks.html
 title: "ConEmu | Tasks"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#launch-apps
+ - url: TableOfContents.html#launch-apps
    title: Launch Apps
 ---
 
