--- a/en/TerminalVsShell.html
+++ b/en/TerminalVsShell.html
@@ -6,12 +6,9 @@ title: "ConEmu | Terminal vs Shell"
 description: "The difference between ‘terminal’ and ‘shell’"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#terms
+ - url: TableOfContents.html#terms
    title: ConEmu
-   next: d
- - id: d
-   url: ConEmuTerms.html
+ - url: ConEmuTerms.html
    title: Terms
 ---
 
