--- a/en/VirtualConsole.html
+++ b/en/VirtualConsole.html
@@ -4,12 +4,9 @@ redirect_from: /ru/VirtualConsole.html
 title: "ConEmu | VirtualConsole"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#terms
+ - url: TableOfContents.html#terms
    title: ConEmu
-   next: d
- - id: d
-   url: ConEmuTerms.html
+ - url: ConEmuTerms.html
    title: Terms
 ---
 
