--- a/en/WhatsNew.html
+++ b/en/WhatsNew.html
@@ -4,8 +4,7 @@ redirect_from: /ru/WhatsNew.html
 title: "ConEmu | WhatsNew Index"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#conemu
+ - url: TableOfContents.html#conemu
    title: ConEmu
 ---
 
