--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -4,12 +4,9 @@ redirect_from: /ru/Whats_New.html
 title: "ConEmu | Whats_New 140104..Current"
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#conemu
+ - url: TableOfContents.html#conemu
    title: ConEmu
-   next: d
- - id: d
-   url: WhatsNew.html
+ - url: WhatsNew.html
    title: WhatsNew
 ---
 
