--- a/en/AnsiEscapeCodes.html
+++ b/en/AnsiEscapeCodes.html
@@ -4,8 +4,7 @@ title: ConEmu | ANSI X3.64 and Xterm-256 Support
 description: "List of ANSI sequences supported by ConEmu. Xterm 256 and 24bit colors extension. Usage examples."
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#features
+ - url: TableOfContents.html#features
    title: Features
 ---
 
