--- a/en/ConEmuFAQ.html
+++ b/en/ConEmuFAQ.html
@@ -4,8 +4,7 @@ title: ConEmu | FAQ - Frequently Asked Questions
 description: Frequenly asked user questions about ConEmu usage
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#conemu
+ - url: TableOfContents.html#conemu
    title: ConEmu
 ---
 
