--- a/ru/AnsiEscapeCodes.html
+++ b/ru/AnsiEscapeCodes.html
@@ -4,8 +4,7 @@ title: ConEmu | поддержка ANSI X3.64 и xterm-256
 description: "Список кодов ANSI последовательностей поддерживаемых в ConEmu. Xterm 256 и 24bit цветовые расширения. Примеры использования."
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#features
+ - url: TableOfContents.html#features
    title: Функции
 ---
 
