--- a/ru/ConEmuFAQ.html
+++ b/ru/ConEmuFAQ.html
@@ -4,8 +4,7 @@ title: ConEmu | FAQ - Частые вопросы
 description: Частые вопросы пользователей о работе с ConEmu
 
 breadcrumbs:
- - id: c
-   url: TableOfContents.html#conemu
+ - url: TableOfContents.html#conemu
    title: ConEmu
 ---
 
