--- a/en/WindowsEnvironment.html
+++ b/en/WindowsEnvironment.html
@@ -1,7 +1,17 @@
 ---
 redirect_from: /ru/WindowsEnvironment.html
 
-title: "ConEmu | Windows Environment"
+title: "ConEmu | Windows Environment Variables"
+
+breadcrumbs:
+ - url: TableOfContents.html#tips-and-tweaks
+   title: Tips and Tweaks
+
+readalso:
+  - url: ConEmuEnvironment.html
+    title: ConEmu Environment Variables
+  - url: ConEmuEnvironment.html#Export_variables
+    title: Export variables
 ---
 
 <!-- Content starts -->
