--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -33,6 +33,16 @@ or anything else, spreading the word for example.
 
 <!-- Content starts -->
 
+<h2 id="Build_150408">Build 150408</h2>
+<ul><li>Far plugins folder can't be configured in MSI-installer anymore.
+    They are installed in <code>%ConEmuDir%\Plugins</code>.
+    If you need separate Far installations - use <code>Far.exe /p...</code> switch. </li>
+	<li>Issue 1590: Speed up cygwin commands execution. </li>
+	<li>Show process information in the ‘Injecting remove failed’ message. </li>
+	<li>Don't add spare default Far tasks, UnExpand paths if possible. </li>
+</ul>
+
+
 <h2><a name="Build_150405"></a>Build 150405<a href="#Build_150405" class="section_anchor"></a></h2>
 <ul><li>Redesign ‘Fast configuration’ dialog. Add ‘Start command’, ‘Palette’, ‘Quake style with HotKey’. </li>
 	<li>Choose preferred startup Task for new configs (Far -> TCC -> NYAOS -> cmd). </li>
