Issue tracker link

--- a/en/Source.html
+++ b/en/Source.html
@@ -32,7 +32,7 @@ title: "ConEmu | Source"
 	<ul><li><a href="./Whats_New.html">Change log</a> </li></ul>
 	<li><a href="http://superuser.com/questions/tagged/conemu" rel="nofollow">Questions on superuser.com</a> </li>
 	<li><a href="http://stackoverflow.com/questions/tagged/conemu" rel="nofollow">Questions on stackoverflow.com</a> </li>
-	<li><a href="https://code.google.com/p/conemu-maximus5/issues/list?can=1&amp;q=&amp;sort=-id+-id&amp;colspec=ID+Stars+Type+Status+Modified+Reporter+Summary&amp;cells=tiles" rel="nofollow">Issue tracker</a> </li>
+	<li><a href="./Issues.html">Issue tracker</a> </li>
 	<li><a href="http://groups.google.com/group/conemu_ml" rel="nofollow">Mailing list</a> </li>
 	<li><a href="http://www.conemu.ru/" rel="nofollow">Russian mirror (under construction)</a> </li>
 </ul>
