Add some breadcrumbs

--- a/en/GuiMacro.html
+++ b/en/GuiMacro.html
@@ -4,6 +4,10 @@ title: "ConEmu | GuiMacro - Syntax, Functions, Examples"
 
 description: "GUI macros are the set of functions allowing to control ConEmu window and its consoles.
    GuiMacro may be called from command line or keypress."
+
+breadcrumbs:
+ - url: TableOfContents.html#controls
+   title: Controls
 ---
 
 <!-- Content starts -->
