--- a/en/KeyboardShortcuts.html
+++ b/en/KeyboardShortcuts.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/KeyboardShortcuts.html
 
 title: "ConEmu | Keyboard Shortcuts"
+
+breadcrumbs:
+ - url: TableOfContents.html#controls
+   title: Controls
 ---
 
 <!-- Content starts -->
