--- a/en/SplitScreen.html
+++ b/en/SplitScreen.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/SplitScreen.html
 
 title: "ConEmu | Split Screen or Panes"
+
+breadcrumbs:
+ - url: TableOfContents.html#controls
+   title: Controls
 ---
 
 <!-- Content starts -->
