--- a/en/SystemMenu.html
+++ b/en/SystemMenu.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/SystemMenu.html
 
 title: "ConEmu | System Menu"
+
+breadcrumbs:
+ - url: TableOfContents.html#controls
+   title: Controls
 ---
 
 <!-- Content starts -->
