--- a/en/TabBar.html
+++ b/en/TabBar.html
@@ -4,6 +4,10 @@ redirect_from: /ru/Tabs.html
 redirect_from: /en/Tabs.html
 
 title: "ConEmu | TabBar"
+
+breadcrumbs:
+ - url: TableOfContents.html#controls
+   title: Controls
 ---
 
 <!-- Content starts -->
