--- a/en/TabMenu.html
+++ b/en/TabMenu.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/TabMenu.html
 
 title: "ConEmu | Tab Menu"
+
+breadcrumbs:
+ - url: TableOfContents.html#controls
+   title: Controls
 ---
 
 <!-- Content starts -->
