--- a/en/TabletPC.html
+++ b/en/TabletPC.html
@@ -4,6 +4,10 @@ pagelang: ru
 title: "ConEmu | Working with touchscreen"
 
 description: "Using ConEmu on TabletPC, gestures and taps."
+
+breadcrumbs:
+ - url: TableOfContents.html#controls
+   title: Controls
 ---
 
 <!-- Content starts -->
