--- a/en/TextSelection.html
+++ b/en/TextSelection.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/TextSelection.html
 
 title: "ConEmu | Text Selection"
+
+breadcrumbs:
+ - url: TableOfContents.html#controls
+   title: Controls
 ---
 
 <!-- Content starts -->
