--- a/ru/TabletPC.html
+++ b/ru/TabletPC.html
@@ -2,6 +2,10 @@
 title: "ConEmu | Работа с тачскрином"
 
 description: "Использование жестов и тапов для работы с ConEmu"
+
+breadcrumbs:
+ - url: TableOfContents.html#controls
+   title: Controls
 ---
 
 <!-- Content starts -->
