--- a/en/GlobalHotKeys.html
+++ b/en/GlobalHotKeys.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/GlobalHotKeys.html
 
 title: "ConEmu | Global Hot Keys"
+
+breadcrumbs:
+ - url: TableOfContents.html#controls
+   title: Controls
 ---
 
 <!-- Content starts -->
