--- a/en/UsingMouse.html
+++ b/en/UsingMouse.html
@@ -2,6 +2,10 @@
 redirect_from: /ru/UsingMouse.html
 
 title: "ConEmu | Using Mouse"
+
+breadcrumbs:
+ - url: TableOfContents.html#controls
+   title: Controls
 ---
 
 <!-- Content starts -->
