Fix multiple 'redirect_from'

--- a/en/ConEmuArgs.html
+++ b/en/ConEmuArgs.html
@@ -1,7 +1,8 @@
 ---
-redirect_from: /en/Command_Line.html
-redirect_from: /ru/Command_Line.html
-redirect_from: /ru/ConEmuArgs.html
+redirect_from:
+ - /en/Command_Line.html
+ - /ru/Command_Line.html
+ - /ru/ConEmuArgs.html
 
 title: "ConEmu | ConEmu.exe Command Line Switches"
 
