--- a/en/ConEmuClink.html
+++ b/en/ConEmuClink.html
@@ -1,7 +1,8 @@
 ---
-redirect_from: /en/ConEmu_Clink.html
-redirect_from: /ru/ConEmu_Clink.html
-redirect_from: /ru/ConEmuClink.html
+redirect_from:
+ - /en/ConEmu_Clink.html
+ - /ru/ConEmu_Clink.html
+ - /ru/ConEmuClink.html
 
 title: "ConEmu | Clink - bash style completion for cmd.exe"
 ---
