--- a/en/CygwinStartDir.html
+++ b/en/CygwinStartDir.html
@@ -1,7 +1,8 @@
 ---
-redirect_from: /ru/CygwinStartDir.html
-redirect_from: /en/CygwinWorkDir.html
-redirect_from: /ru/CygwinWorkDir.html
+redirect_from:
+ - /ru/CygwinStartDir.html
+ - /en/CygwinWorkDir.html
+ - /ru/CygwinWorkDir.html
 
 title: "ConEmu | Cygwin Startup Directory"
 ---
