--- a/en/DefaultTerminal.html
+++ b/en/DefaultTerminal.html
@@ -1,7 +1,8 @@
 ---
-redirect_from: /en/DefTerm.html
-redirect_from: /ru/DefTerm.html
-redirect_from: /ru/DefaultTerminal.html
+redirect_from:
+ - /en/DefTerm.html
+ - /ru/DefTerm.html
+ - /ru/DefaultTerminal.html
 
 title: "ConEmu | DefaultTerminal"
 
