--- a/en/DpiAware.html
+++ b/en/DpiAware.html
@@ -1,6 +1,7 @@
 ---
-redirect_from: /ru/DpiAware.html
-redirect_from: /en/PerMonitorDpi.html
+redirect_from:
+ - /ru/DpiAware.html
+ - /en/PerMonitorDpi.html
 
 title: "ConEmu | High DPI Awareness"
 ---
