--- a/en/MemoryDump.html
+++ b/en/MemoryDump.html
@@ -1,7 +1,8 @@
 ---
-redirect_from: /en/MiniDump.html
-redirect_from: /ru/MiniDump.html
-redirect_from: /ru/MemoryDump.html
+redirect_from:
+ - /en/MiniDump.html
+ - /ru/MiniDump.html
+ - /ru/MemoryDump.html
 
 title: "ConEmu | MemoryDump"
 ---
