--- a/en/ShellWorkDir.html
+++ b/en/ShellWorkDir.html
@@ -1,7 +1,8 @@
 ---
-redirect_from: /ru/ShellWorkDir.html
-redirect_from: /ru/CygwinCurDir.html
-redirect_from: /en/CygwinCurDir.html
+redirect_from:
+ - /ru/ShellWorkDir.html
+ - /ru/CygwinCurDir.html
+ - /en/CygwinCurDir.html
 
 title: "ConEmu | Shell Working Directory"
 ---
