--- a/en/TabBar.html
+++ b/en/TabBar.html
@@ -1,7 +1,8 @@
 ---
-redirect_from: /ru/TabBar.html
-redirect_from: /ru/Tabs.html
-redirect_from: /en/Tabs.html
+redirect_from:
+ - /ru/TabBar.html
+ - /ru/Tabs.html
+ - /en/Tabs.html
 
 title: "ConEmu | TabBar"
 
