--- a/en/SettingsFast.html
+++ b/en/SettingsFast.html
@@ -37,7 +37,7 @@ description: "ConEmu first start, Fast Configuration Dialog"
 
 <h1><a name="Первый_запуск"></a>Первый запуск<a href="#Первый_запуск" class="section_anchor"></a></h1>
 <p>Итак, при <strong>первом</strong> запуске программы вы, скорее всего, увидите диалог <strong>быстрой</strong> настройки: </p>
-<p><img src="../img/ConEmuPreConfig.png" title="Окно предварительной настройки ConEmu"> </p>
+<p><img src="/img/Settings-Fast.png" title="Окно предварительной настройки ConEmu"> </p>
 <p>Вы можете выбрать, что будете разрешать ConEmu, т.к. на некоторые функции (перехват клавиатуры, внедрение в процессы, доступ к интернету) могут ругаться антивирусные программы. <strong>ConEmu не содержит троянов или вирусов</strong>, код открыт, можете  <a href="http://code.google.com/p/conemu-maximus5/source/checkout" rel="nofollow">проверить</a>. Тем не менее, вы можете отключить эти функции, хотя это и не рекомендуется. </p>
 
 <h2><a name="Install_keyboard_hooks"></a>Install keyboard hooks<a href="#Install_keyboard_hooks" class="section_anchor"></a></h2>
