--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -33,6 +33,12 @@ or anything else, spreading the word for example.
 
 <!-- Content starts -->
 
+<h2 id="Build_150409">Build 150409</h2>
+<ul><li>gh#63: Option ‘Auto save/restore tabs’ was conflicted with unchecked ‘Quit on close’. </li>
+	<li>Some of GuiMacro functions must be executed in the main thread only. </li>
+</ul>
+
+
 <h2 id="Build_150408">Build 150408</h2>
 <ul><li>Far plugins folder can't be configured in MSI-installer anymore.
     They are installed in <code>%ConEmuDir%\Plugins</code>.
