Add HotKeys readalso

--- a/en/KeyboardShortcuts.html
+++ b/en/KeyboardShortcuts.html
@@ -6,6 +6,14 @@ title: "ConEmu | Keyboard Shortcuts"
 breadcrumbs:
  - url: TableOfContents.html#controls
    title: Controls
+
+readalso:
+ - url: SettingsHotkeys.html
+   title: Settings › Keys & Macro page
+ - url: SettingsControls.html
+   title: Settings › Controls page
+ - url: GlobalHotKeys.html
+   title: Global Hot Keys
 ---
 
 <!-- Content starts -->
