--- a/en/SettingsHotkeys.html
+++ b/en/SettingsHotkeys.html
@@ -2,6 +2,14 @@
 redirect_from: /ru/SettingsHotkeys.html
 
 title: "ConEmu | Settings › Hotkeys page"
+
+readalso:
+ - url: KeyboardShortcuts.html
+   title: Keyboard Shortcuts
+ - url: SettingsControls.html
+   title: Settings › Controls page
+ - url: GlobalHotKeys.html
+   title: Global Hot Keys
 ---
 
 <!-- Content starts -->
