Update HotKeys title

--- a/en/SettingsHotkeys.html
+++ b/en/SettingsHotkeys.html
@@ -1,7 +1,7 @@
 ---
 redirect_from: /ru/SettingsHotkeys.html
 
-title: "ConEmu | Settings › Hotkeys page"
+title: "ConEmu | Settings › Keys & Macro page"
 
 readalso:
  - url: KeyboardShortcuts.html
