--- a/donate.html
+++ b/donate.html
@@ -4,6 +4,8 @@ title: ConEmu | Support development by donation
 description: "You can show your appreciation and support further development and maintaining
    by contributing with bugreporting, funding, documentation, code or anything else."
 
+noindex: true
+
 breadcrumbs:
  - url: TableOfContents.html#conemu
    title: ConEmu
