--- a/en/SettingsUpdate.html
+++ b/en/SettingsUpdate.html
@@ -1,7 +1,7 @@
 ---
 redirect_from: /ru/SettingsUpdate.html
 
-title: "ConEmu | Settings > Update page"
+title: "ConEmu | Settings › Update page"
 ---
 
 <!-- Content starts -->
