Add #screenshots anchor

--- a/en/Settings.html
+++ b/en/Settings.html
@@ -71,6 +71,8 @@ description: "Where the settings are stored, Settings dialog description, conver
 <li>by right-clicking on the ConEmu (running) icon in the taskbar (in Windows 7 you must hold down Shift key) </li>
 <li>by right-clicking on the ConEmu icon in <a href="ConEmuTerms.html#TSA">TSA</a> (if you enable TSA feature) </li></ul><li>Or, you may press Win+Alt+P on the keyboard (predefined hotkey) </li></ul></p>
 
+<a name="screenshots"></a>
+
 <h2><a name="Main"></a>Main<a href="#Main" class="section_anchor"></a></h2>
 <p><img src="../img/SettingsMain.png" title="ConEmu settings, Main page" alt="ConEmu settings, Main page"> </p>
 
