--- a/en/Whats_New.html
+++ b/en/Whats_New.html
@@ -33,6 +33,15 @@ or anything else, spreading the word for example.
 
 <!-- Content starts -->
 
+<h2 id="Build_150419">Build 150419</h2>
+<ul><li>DefTerm. First VisualStudio debugging session was not processed by DefTerm. </li>
+	<li>Default settings were not applied on first start (suggested startup task). </li>
+	<li>gh#104: Add default task for Git-for-Windows-v2. </li>
+	<li>gh#107: Quoted Task names were not working after ConEmu.exe `-cmd` argument. </li>
+	<li>Warning 'Maximum real console size was reached' was appeared sometimes during several splits tab closing. </li>
+</ul>
+
+
 <h2 id="Build_150416">Build 150416</h2>
 <ul><li>gh#96: DefTerm was failed to hook VS Debugging console applications. Avoid deadlocks. </li>
 	<li>Issue 1965: Correct 3rd state condition for ‘Change prompt text cursor position with LClick’. </li>
