Minor fix in description (200 chars)

--- a/en/index.html
+++ b/en/index.html
@@ -5,8 +5,9 @@ redirect_from: /en/ConEmu.html
 
 title: ConEmu - Handy Windows Terminal
 
-description: "ConEmu-Maximus5 is a full-featured local terminal for Windows developers, administrators and users.
-   Tabs, splits, optional Quake style, handy copy and paste, ANSI, CJK, UTF-8, DosBox and PuTTY integration, and much more..."
+description: >
+  ConEmu-Maximus5 is a full-featured local terminal for Windows devs, admins and users.
+  Get better console window with tabs, splits, Quake style, copy+paste, DosBox and PuTTY integration, and much more.
 
 og_image: http://conemu.github.io/img/ConEmu-Maximus5.png
 ---
